{
  "version": 4,
  "terraform_version": "1.10.1",
  "serial": 76,
  "lineage": "9a51df10-3c00-cce2-eb35-e07696378080",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-042e76978adeb8c48",
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:instance/i-0f69f100f33eb3f96",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f69f100f33eb3f96",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "multi-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f26c4e99c6a6c393",
            "private_dns": "ip-172-31-11-225.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.11.225",
            "public_dns": "ec2-43-202-60-102.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.202.60.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05d5336f1ca63f844",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "web-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb34baa9234dfe29",
            "tags": {
              "Name": "ubuntu-web"
            },
            "tags_all": {
              "Name": "ubuntu-web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-011945653444e7e33"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:security-group/sg-011945653444e7e33",
            "description": "Allow HTTP inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-011945653444e7e33",
            "ingress": [],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "662947429974",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg"
            },
            "tags_all": {
              "Name": "web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d79979d3d691fc88"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:security-group-rule/sgr-0a912b5af21de9881",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0a912b5af21de9881",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-011945653444e7e33",
            "security_group_rule_id": "sgr-0a912b5af21de9881",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:security-group-rule/sgr-0a6e074594f65b17f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0a6e074594f65b17f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-011945653444e7e33",
            "security_group_rule_id": "sgr-0a6e074594f65b17f",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh"
          ]
        }
      ]
    }
  ]
}